# question_generator

./: .gitignore  README.md  app.py  data.db  data.json  database.py  generator.py  pyproject.toml  questions.py  requirements.txt
routes/: admin.py  main.py
templates/: add_pulication.html  add_question.html  base.html  delete.html  delete_question.html  delete_question_type.html  index.html  question_paper.html  rename_question.html
