[project]
name = "question-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
]
